Add block to schema
